--- a/search/index.html
+++ b/search/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://xubujie.github.io/DataScienceBlog/search/" />
 <meta property="og:site_name" content="Jay’s Blog" />
 <script type="application/ld+json">
-{"description":"Sharing my learning and idea","@type":"WebPage","url":"https://xubujie.github.io/DataScienceBlog/search/","headline":"Search","@context":"https://schema.org"}</script>
+{"description":"Sharing my learning and idea","@type":"WebPage","headline":"Search","url":"https://xubujie.github.io/DataScienceBlog/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/DataScienceBlog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://xubujie.github.io/DataScienceBlog/feed.xml" title="Jay's Blog" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -32,7 +32,7 @@
 <meta property="og:url" content="https://xubujie.github.io/DataScienceBlog/search/" />
 <meta property="og:site_name" content="Jay’s Blog" />
 <script type="application/ld+json">
-{"description":"Sharing my learning and idea","@type":"WebPage","url":"https://xubujie.github.io/DataScienceBlog/search/","headline":"Search","@context":"https://schema.org"}</script>
+{"description":"Sharing my learning and idea","@type":"WebPage","headline":"Search","url":"https://xubujie.github.io/DataScienceBlog/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
